@@ -666,7 +666,7 @@ Element* ChordRest::drop(const DropData& data)
                   NoteVal nval;
                   nval.pitch = note->pitch();
                   nval.headGroup = note->headGroup();
-                  score()->setNoteRest(this, track(), nval, Fraction(1, 4), AUTO);
+                  score()->setNoteRest(segment(), track(), nval, Fraction(1, 4), AUTO);
                   delete e;
                   }
                   break;
