@@ -63,7 +63,6 @@ class InputState {
       void setSegment(Segment* s)         { _segment = s;           }
 
       Drumset* drumset() const;
-//      void setDrumset(Drumset* d)         { _drumset = d;           }
 
       int drumNote() const                { return _drumNote;       }
       void setDrumNote(int v)             { _drumNote = v;          }
